--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 volumes:
-  pgdata:
   shell_history:
 
 services:
@@ -11,23 +10,35 @@ services:
       target: dev
       cache_from:
         - eduzen/bot:latest
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /code
+          ignore:
+            - .venv/
+            - .git/
+            - .vscode/
+            - .pytest_cache/
+            - __pycache__/
+        - action: rebuild
+          path: ./pyproject.toml
     volumes:
+      - /code/.venv
       - .:/code
       - shell_history:/root/hist
     env_file:
       - .env
-    links:
-      - db
 
-  db:
-    image: postgres:13-alpine3.17
-    command: ["postgres", "-c", "log_statement=none"]
-    expose:
-      - "5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  # db:
+  #   image: postgres:17-alpine
+  #   command: ["postgres", "-c", "log_statement=none"]
+  #   expose:
+  #     - "5432"
+  #   volumes:
+  #     - pgdata:/var/lib/postgresql/data/
+  #   environment:
+  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
   wdb:
     profiles: ["dev"]
